k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
      version: v1  
  template:
    metadata:
      labels:
        app: product-service
        version: v1 
    spec:
      containers:
      - name: product
        image: product-service:v1
        ports:
        - containerPort: 3001
