k8s/product-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
      version: v2
  template:
    metadata:
      labels:
        app: product-service
        version: v2
    spec:
      containers:
      - name: product
        image: product-service:v2
        imagePullPolicy: Never 
        ports:
        - containerPort: 3001
