k8s/product-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product-service-dr
spec:
  host: product-service 
  subsets: 
  - name: v1
    labels:
      version: v1 
  - name: v2
    labels:
      version: v2
