k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microservices-routing
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /users
    route:
    - destination:
        host: user-service
        port:
          number: 3000

  - match:
    - uri:
        prefix: /products
    route:
    - destination:
        host: product-service
        subset: v1 
      weight: 90
    - destination:
        host: product-service
        subset: v2 
      weight: 10
